src/content/css/tailwind.css
@layer properties, theme, base, components, utilities;

@import "tailwindcss/theme.css" layer(theme);
@import "tailwindcss/utilities.css" layer(utilities) source("../ui");
@import "tw-animate-css";
@import "../../shared/vars.css";
@source "../../shared";

@theme {
    --z-index-modal-bg: 100001;
    --z-index-modal: 100002;
    --z-index-alert-bg: 100011;
    --z-index-alert: 100012;
    --z-index-overlay-bg: 100021;
    --z-index-overlay: 100022;
}

@layer theme {
    .preflight, .preflight::after, .preflight::before, .preflight::backdrop, .preflight *, .preflight ::after, .preflight ::before, .preflight ::backdrop, .preflight ::file-selector-button {
        box-sizing: border-box;
        margin: 0;
        padding: 0;
        border: 0 solid;
    }

    button.preflight,
    .preflight button {
        cursor: pointer;
    }

    .preflight hr {
        height: 0;
        color: inherit;
        border-top-width: 1px;
    }

    .preflight abbr:where([title]) {
        -webkit-text-decoration: underline dotted;
        text-decoration: underline dotted;
    }

    .preflight h1, .preflight h2, .preflight h3, .preflight h4, .preflight h5, .preflight h6 {
        font-size: inherit;
        font-weight: inherit;
    }

    .preflight a {
        color: inherit;
        -webkit-text-decoration: inherit;
        text-decoration: inherit;
    }

    .preflight b, .preflight strong {
        font-weight: bolder;
    }

    .preflight code, .preflight kbd, .preflight samp, .preflight pre {
        font-family: --theme(--default-mono-font-family, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace);
        font-feature-settings: --theme(--default-mono-font-feature-settings, normal);
        font-variation-settings: --theme(--default-mono-font-variation-settings, normal);
        font-size: 1em;
    }

    .preflight small {
        font-size: 80%;
    }

    .preflight sub, .preflight sup {
        font-size: 75%;
        line-height: 0;
        position: relative;
        vertical-align: baseline;
    }

    .preflight sub {
        bottom: -0.25em;
    }

    .preflight sup {
        top: -0.5em;
    }

    .preflight table {
        text-indent: 0;
        border-color: inherit;
        border-collapse: collapse;
    }

    .preflight :-moz-focusring, .preflight:-moz-focusring {
        outline: auto;
    }

    .preflight progress {
        vertical-align: baseline;
    }

    .preflight summary {
        display: list-item;
    }

    .preflight ol, .preflight ul, .preflight menu {
        list-style: none;
    }

    .preflight img, .preflight svg, .preflight video, .preflight canvas, .preflight audio, .preflight iframe, .preflight embed, .preflight object {
        display: block;
        vertical-align: middle;
    }

    .preflight img, .preflight video {
        max-width: 100%;
        height: auto;
    }

    button.preflight,
    input.preflight,
    select.preflight,
    optgroup.preflight,
    textarea.preflight,
    .preflight button,
    .preflight input,
    .preflight select,
    .preflight optgroup,
    .preflight textarea,
    .preflight ::file-selector-button {
        font: inherit;
        font-feature-settings: inherit;
        font-variation-settings: inherit;
        letter-spacing: inherit;
        color: inherit;
        border-radius: 0;
        background-color: rgba(0, 0, 0, 0);
        opacity: 1;
    }

    .preflight :where(select:is([multiple], [size])) optgroup {
        font-weight: bolder;
    }

    .preflight :where(select:is([multiple], [size])) optgroup option {
        padding-inline-start: 20px;
    }

    .preflight ::file-selector-button {
        margin-inline-end: 4px;
    }

    .preflight ::placeholder {
        opacity: 1;
    }

    @supports (not (-webkit-appearance: -apple-pay-button)) or (contain-intrinsic-size: 1px) {
        .preflight ::placeholder {
            color: color-mix(in oklab, currentcolor 50%, transparent);
        }
    }
    .preflight textarea {
        resize: vertical;
    }

    .preflight ::-webkit-search-decoration {
        -webkit-appearance: none;
    }

    .preflight ::-webkit-date-and-time-value {
        min-height: 1lh;
        text-align: inherit;
    }

    .preflight ::-webkit-datetime-edit {
        display: inline-flex;
    }

    .preflight ::-webkit-datetime-edit-fields-wrapper {
        padding: 0;
    }

    .preflight ::-webkit-datetime-edit,
    .preflight ::-webkit-datetime-edit-year-field,
    .preflight ::-webkit-datetime-edit-month-field,
    .preflight ::-webkit-datetime-edit-day-field,
    .preflight ::-webkit-datetime-edit-hour-field,
    .preflight ::-webkit-datetime-edit-minute-field,
    .preflight ::-webkit-datetime-edit-second-field,
    .preflight ::-webkit-datetime-edit-millisecond-field,
    .preflight ::-webkit-datetime-edit-meridiem-field {
        padding-block: 0;
    }

    .preflight ::-webkit-calendar-picker-indicator {
        line-height: 1;
    }

    .preflight :-moz-ui-invalid {
        box-shadow: none;
    }

    button.preflight,
    .preflight button,
    .preflight input:where([type="button"], [type="reset"], [type="submit"]),
    .preflight ::file-selector-button {
        appearance: button;
    }

    .preflight ::-webkit-inner-spin-button, .preflight ::-webkit-outer-spin-button {
        height: auto;
    }

    .preflight [hidden]:where(:not([hidden="until-found"])) {
        display: none !important;
    }
}

